--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
 
+    implementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito:mockito-core:3.8.0"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
@@ -95,4 +98,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.14.1'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.9'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+//    implementation "com.blankj:utilcode:1.25.5"
 }
