--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,19 @@ buildscript {
         accompanist_version = '0.28.0'
         nav_version = '2.5.3'
     }
+
+    repositories {
+        google()
+        maven { url  'https://repo1.maven.org/maven2/'}
+        mavenCentral()
+        maven{
+            url "https//maven.google.com"
+        }
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
 }
+
