--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,12 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.Myworker"/>
 
+        <activity
+            android:name=".ui.account.login_pwd.VerifyCodeLoginActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Myworker"/>
+
     </application>
 
 </manifest>
