--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext {
+        ext.kotlin_version = '1.6.10'
         compose_ui_version = '1.3.1'
         accompanist_version = '0.28.0'
         nav_version = '2.5.3'
@@ -13,6 +14,17 @@ buildscript {
             url "https//maven.google.com"
         }
     }
+
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.0"
+        classpath 'com.google.gms:google-services:4.3.8'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.4"
+
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.1' apply false
